[gd_scene load_steps=15 format=3 uid="uid://c1nqp81cess0x"]

[ext_resource type="Material" uid="uid://w0qtrr7jio8o" path="res://Shaders/Transparency/BurnOut.tres" id="1_xmwi2"]
[ext_resource type="Script" path="res://Code/Scenes/Board&Beads/SinglePiece.gd" id="2_3mwsr"]
[ext_resource type="Texture2D" uid="uid://ddt27me2jsi6a" path="res://Art/Beads/EarthOrb.png" id="3_2tfol"]
[ext_resource type="PackedScene" uid="uid://4feies2oagdp" path="res://Scenes/Constants/ETC/connected.tscn" id="3_v1280"]
[ext_resource type="Texture2D" uid="uid://cc78oeoy5ldrd" path="res://Art/Beads/LiquidOrb.png" id="4_gou0l"]
[ext_resource type="Texture2D" uid="uid://doi7jo00s4wmw" path="res://Art/ETC/857-8579317_ftestickers-effect-overlay-glow-white-universe-2663166295.png" id="5_lflmb"]
[ext_resource type="Texture2D" uid="uid://pbaqi8u6vslb" path="res://Art/Beads/AirOrb.png" id="5_xevfo"]
[ext_resource type="Script" path="res://Code/Constants/LinkArray.gd" id="6_avety"]
[ext_resource type="Texture2D" uid="uid://dy73pk3cbyn7p" path="res://Art/Beads/LightOrb.png" id="6_bnx1h"]
[ext_resource type="Texture2D" uid="uid://2tvxklp6un8s" path="res://Art/Beads/DarkOrb.png" id="7_7wy5j"]
[ext_resource type="AudioStream" uid="uid://dmum7mn3abqi" path="res://Audio/BoardSFX/BreakSFX/Brak1.wav" id="11_dj0cq"]
[ext_resource type="AudioStream" uid="uid://dmqj2u4jpxoyp" path="res://Audio/BoardSFX/BreakSFX/Brak2.wav" id="12_yjdwj"]
[ext_resource type="AudioStream" uid="uid://hknh6c41g4qn" path="res://Audio/BoardSFX/BreakSFX/Brak3.wav" id="13_4kv4x"]
[ext_resource type="AudioStream" uid="uid://c37ajq80vr346" path="res://Audio/BoardSFX/BreakSFX/Brak4.wav" id="14_m1x3d"]

[node name="SingleBead" type="Node2D"]
modulate = Color(0.992157, 0.992157, 1, 1)
material = ExtResource("1_xmwi2")
scale = Vector2(0.85, 0.85)
script = ExtResource("2_3mwsr")
beads = Array[CompressedTexture2D]([ExtResource("3_2tfol"), ExtResource("4_gou0l"), ExtResource("5_xevfo"), ExtResource("6_bnx1h"), ExtResource("7_7wy5j")])
chainedVFX = ExtResource("3_v1280")

[node name="Sprite" type="TextureRect" parent="."]
light_mask = 2
visibility_layer = 2
use_parent_material = true
offset_left = -31.0
offset_top = -30.0
offset_right = 32.0
offset_bottom = 33.0
texture = ExtResource("5_xevfo")
expand_mode = 2
stretch_mode = 5

[node name="Glow" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.52549)
light_mask = 2
visibility_layer = 2
use_parent_material = true
position = Vector2(2, 1)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_lflmb")

[node name="Connections" type="Node2D" parent="."]
use_parent_material = true

[node name="ConnectMarkers" type="Node2D" parent="."]

[node name="L1" type="Marker2D" parent="ConnectMarkers"]
unique_name_in_owner = true
position = Vector2(-25.5, -7)

[node name="L2" type="Marker2D" parent="ConnectMarkers"]
unique_name_in_owner = true
position = Vector2(25.5, 7)

[node name="R1" type="Marker2D" parent="ConnectMarkers"]
unique_name_in_owner = true
position = Vector2(25.5, -7)

[node name="R2" type="Marker2D" parent="ConnectMarkers"]
unique_name_in_owner = true
position = Vector2(-25.5, 7)

[node name="U1" type="Marker2D" parent="ConnectMarkers"]
unique_name_in_owner = true
position = Vector2(7, -25.5)

[node name="U2" type="Marker2D" parent="ConnectMarkers"]
unique_name_in_owner = true
position = Vector2(-7, 25.5)

[node name="D1" type="Marker2D" parent="ConnectMarkers"]
unique_name_in_owner = true
position = Vector2(7, 25.5)

[node name="D2" type="Marker2D" parent="ConnectMarkers"]
unique_name_in_owner = true
position = Vector2(-7, -25.5)

[node name="FullPieceConnection" type="TabContainer" parent="."]
visible = false
offset_left = -25.0
offset_top = -26.0
offset_right = 26.0
offset_bottom = 25.0

[node name="Anchor" type="TextureRect" parent="FullPieceConnection"]
layout_mode = 2

[node name="NonAnchor" type="TextureRect" parent="FullPieceConnection"]
visible = false
layout_mode = 2

[node name="LinkArray" type="Node" parent="."]
editor_description = "This is a seperate node so it's changes can be seen by every node that refers to it"
script = ExtResource("6_avety")

[node name="BreakSFX" type="Node" parent="."]

[node name="Break" type="AudioStreamPlayer" parent="BreakSFX"]
unique_name_in_owner = true
stream = ExtResource("11_dj0cq")
volume_db = -4.0

[node name="Break2" type="AudioStreamPlayer" parent="BreakSFX"]
unique_name_in_owner = true
stream = ExtResource("12_yjdwj")
volume_db = -4.0

[node name="Break3" type="AudioStreamPlayer" parent="BreakSFX"]
unique_name_in_owner = true
stream = ExtResource("13_4kv4x")
volume_db = -4.0

[node name="Break4" type="AudioStreamPlayer" parent="BreakSFX"]
unique_name_in_owner = true
stream = ExtResource("14_m1x3d")
volume_db = -4.0
